# rankings-django

./: .dockerignore  .gitignore  CHANGELOG.md  NOTICE  README.md  nginx.conf  pyproject.toml  requirements.txt  run.sh  setup.cfg
.devcontainer/: Dockerfile  Dockerfile-python  README.md  devcontainer.json  docker-compose.yml  version.json
.github/workflows/: tests.yml
deploy/: Caddyfile  Dockerfile  Dockerfile.template  gunicorn.sh  manage  nginx.conf  prepare_repo.sh  rankings-docker.service  setup-app.Dockerfile  setup_server.sh  start_nginx.sh  supervisord.conf  test_caddy.sh  ubuntu-motd
deploy/base/: prepare_repo.sh  run-rankings-site.sh
deploy/old/: backup.sh  nginx.conf  rankings.service
deploy/static-sites/: README.md
deploy/static-sites/caddy/: scoring.Caddyfile
deploy/static-sites/scoring/: index.html
rankings/: README.md  manage.py  pyproject.toml
rankings-tailwind/: README.md  package.json
rankings-tailwind/src/: app.css  store.ts
rankings-tailwind/src/lib/: card.svelte  footer.svelte  navbar.svelte  table.svelte  time-plot.svelte
rankings-tailwind/src/routes/: +layout.svelte  +page.svelte
rankings-tailwind/src/routes/[activity]/: +page.svelte
rankings-tailwind/src/routes/about/: +page.svelte
rankings/matches/: admin.py  models.py  views.py
rankings/matches/migrations/: 0001_initial.py
rankings/previous/: __init__.py  admin.py  api.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
rankings/previous/fixtures/: game.json  players.json
rankings/previous/fixtures/example/: activity.json  adhocteam.json  game.json  gamesession.json  player.json  ranking.json  result.json  skillhistory.json  skilltype.json  teammember.json
rankings/previous/migrations/: 0001_initial.py  0002_gamesession.py  0002_match.py  0002_player_active.py  0003_activity_active.py  0003_game_result.py  0004_activity_url.py  0004_ranking_to_result.py  0005_add_defaults.py  0005_alter_activity_about_alter_activity_name_and_more.py  0006_make_managed.py  __init__.py
rankings/previous/templates/previous/: about.html  activity_summary.html  admin.html  form_newmatch.html  layout.html  list_matches.html  list_players.html  login.html  main_page.html  match_table.html  pending_match_table.html  player.html  player_table.html  select_player_to_fix.html
rankings/rankings/: __init__.py  check_db.py  jinja2.py  settings.py  urls.py  wsgi.py
rankings/static/css/: foundation.css  style.css
rankings/static/js/: lib.js  submit.js  utils.js
rankings/templates/: swagger.html
rankings/templates/rest_framework/: api.html
svelte-ui/: .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
svelte-ui/src/: app.css  app.d.ts  app.html  store.ts
svelte-ui/src/lib/: add-button.svelte  api.ts  card.svelte  dynamic-data.svelte  footer.svelte  loader.svelte  navbar.svelte  table.svelte  text-button.svelte  time-plot.svelte  utils.ts
svelte-ui/src/lib/components/: add-button.svelte  add-match.svelte  card.svelte  dropdown.svelte  dynamic-data.svelte  flag.svelte  footer.svelte  gaussian-plot.svelte  icon.svelte  index.ts  loader.svelte  navbar.svelte  paging-nav.svelte  pending-matches.svelte  plotly-wrapper.svelte  table-wrap.svelte  table.svelte  tabs.svelte  text-button.svelte  time-plot.svelte
svelte-ui/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
svelte-ui/src/routes/[activity]/: +layout.svelte  +page.svelte  +page.ts
svelte-ui/src/routes/[activity]/matches/: +page.svelte
svelte-ui/src/routes/[activity]/matches/[id]/: +page.svelte
svelte-ui/src/routes/[activity]/player/[player_id]/: +page.svelte  +page.ts
svelte-ui/src/routes/[activity]/players/: +page.svelte
svelte-ui/src/routes/about/: +page.svelte
svelte-ui/static/: app.webmanifest
svelte-ui/static/assets/: version.json
svelte-ui/static/js/: download_vendors.sh
