[tool.poetry]
name = "rankings-django"
version = "0.1.0"
description = ""
authors = ["Simon Muller <samullers@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/samuller/rankings-django"
repository = "https://github.com/samuller/rankings-django"
packages = [
    # Currently only used so we can get version with importlib.metadata.version
    { include = "rankings" }
]
include = ["NOTICE"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
Django = "3.2.20"
trueskill = "0.4.5"
# We prefer Jinja over Django Templating as we migrated our templates from a Flask app
Jinja2 = "2.11.3"
# Required by Jinja2 and we lock an older version as v2.1.3 gives "ImportError" of "soft_unicode"
markupsafe = "2.0.1"
# Add support for the Admin tool to do editing of multiple rows at once
django-mass-edit = "3.5.0"
# Use DRF to easily generate REST/JSON APIs 
djangorestframework = "3.14.0"
# Recommended by DRF for filtering capabilities
django-filter = "23.2"
# Needed for DRF's dynamic schema generation for OpenAPI docs
# See: https://www.django-rest-framework.org/api-guide/schemas/#install-dependencies
uritemplate = "4.1.1"
# Prefer "Github-style" pagination that adds headers instead of changing result
# See: https://docs.github.com/en/rest/guides/traversing-with-pagination
drf-link-header-pagination = "0.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
flake8-docstrings = "^1.6.0"
mypy = "^1.5.1"
coverage = "^7.3.0"

[tool.mypy]
# We only add configs here that can apply equally to our main code and our test code
ignore_missing_imports = true
exclude = ["migrations/"]  # "**/*/migrations/"

[tool.black]
exclude = "migrations/"
# Change black's default line length from 88 to 120 characters.
# line-length = 120

[tool.coverage.run]
branch = true
dynamic_context = "test_function"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
